# bistra

./: .gitmodules  CMakeLists.txt  Dockerfile.llvm  README.md
examples/: CMakeLists.txt  batched_add.m  batchnorm.m  concat.m  conv.m  conv_dkkc8.m  fuse_relu.m  gemm.m  matmul.m  maxpool.m  overflow.m  print.m  softmax.m  transpose.m
include/bistra/Analysis/: Program.h  Value.h  Visitors.h
include/bistra/Backends/: Backend.h  Backends.h
include/bistra/Backends/CBackend/: CBackend.h
include/bistra/Backends/LLVMBackend/: LLVMBackend.h
include/bistra/Base/: Base.h
include/bistra/Bytecode/: Bytecode.h
include/bistra/CodeGen/: CodeGen.h
include/bistra/Optimizer/: Optimizer.h
include/bistra/Parser/: BinaryOps.def  Lexer.h  Parser.h  ParserContext.h  Token.h  Tokens.def
include/bistra/Program/: Pragma.h  Program.h  Types.h  UseDef.h  Utils.h
include/bistra/Transforms/: Dependence.h  Simplify.h  Transforms.h
lib/: CMakeLists.txt
lib/Analysis/: CMakeLists.txt  Program.cpp  Value.cpp
lib/Backends/: Backends.cpp  CMakeLists.txt
lib/Backends/CBackend/: CBackend.cpp  CMakeLists.txt
lib/Backends/LLVMBackend/: CMakeLists.txt  JIT.h  LLVMBackend.cpp  Runner.cpp
lib/Bytecode/: Bytecode.cpp  CMakeLists.txt
lib/CodeGen/: CMakeLists.txt  CodeGen.cpp
lib/Optimizer/: CMakeLists.txt  Optimizer.cpp
lib/Parser/: CMakeLists.txt  Lexer.cpp  Parser.cpp  ParserContext.cpp
lib/Program/: CMakeLists.txt  Program.cpp  Types.cpp  Utils.cpp
lib/Transforms/: CMakeLists.txt  Dependence.cpp  Simplify.cpp  Transforms.cpp
tests/: CMakeLists.txt
tests/unittests/: CMakeLists.txt  basic.cpp  basic_test.cpp  bytecode_test.cpp  optimizer_test.cpp  parser.cpp  parser_test.cpp  runtime_test.cpp
tools/: CMakeLists.txt
tools/benchmark/: CMakeLists.txt  benchmark.cpp
tools/bistrac/: CMakeLists.txt  bistrac.cpp
tools/playground/: CMakeLists.txt  playground.cpp
tools/tuner/: CMakeLists.txt  tuner.cpp
utils/: visualize_allocations.py
